--- a/TRange/TRange.vcxproj.filters
+++ b/TRange/TRange.vcxproj.filters
@@ -27,6 +27,24 @@
     <ClInclude Include="Include\TRange\Query.hpp">
       <Filter>ヘッダー ファイル\TRange</Filter>
     </ClInclude>
+    <ClInclude Include="Include\TRange\WithIndex.hpp">
+      <Filter>ヘッダー ファイル\TRange</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\TRange\Reverse.hpp">
+      <Filter>ヘッダー ファイル\TRange</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\TRange\Clone.hpp">
+      <Filter>ヘッダー ファイル\TRange</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\TRange\IRange.h">
+      <Filter>ヘッダー ファイル\TRange</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\TRange\Util.h">
+      <Filter>ヘッダー ファイル\TRange</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\TRange\Skip.hpp">
+      <Filter>ヘッダー ファイル\TRange</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
