--- a/TRange/TRange.vcxproj
+++ b/TRange/TRange.vcxproj
@@ -125,12 +125,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Include\TRange.hpp" />
+    <ClInclude Include="Include\TRange\Aggregate.hpp" />
     <ClInclude Include="Include\TRange\Clone.hpp" />
     <ClInclude Include="Include\TRange\Concept.hpp" />
     <ClInclude Include="Include\TRange\IRange.h" />
+    <ClInclude Include="Include\TRange\Judgement.hpp" />
     <ClInclude Include="Include\TRange\Query.hpp" />
     <ClInclude Include="Include\TRange\Reverse.hpp" />
     <ClInclude Include="Include\TRange\Skip.hpp" />
+    <ClInclude Include="Include\TRange\Take.hpp" />
     <ClInclude Include="Include\TRange\Util.h" />
     <ClInclude Include="Include\TRange\WithIndex.hpp" />
   </ItemGroup>
