--- a/TRange/TRange.vcxproj
+++ b/TRange/TRange.vcxproj
@@ -128,13 +128,14 @@
     <ClInclude Include="Include\TRange\Aggregate.hpp" />
     <ClInclude Include="Include\TRange\Clone.hpp" />
     <ClInclude Include="Include\TRange\Concept.hpp" />
-    <ClInclude Include="Include\TRange\IRange.h" />
+    <ClInclude Include="Include\TRange\IRange.hpp" />
     <ClInclude Include="Include\TRange\Judgement.hpp" />
     <ClInclude Include="Include\TRange\Query.hpp" />
     <ClInclude Include="Include\TRange\Reverse.hpp" />
     <ClInclude Include="Include\TRange\Skip.hpp" />
     <ClInclude Include="Include\TRange\Take.hpp" />
-    <ClInclude Include="Include\TRange\Util.h" />
+    <ClInclude Include="Include\TRange\Util.hpp" />
+    <ClInclude Include="Include\TRange\Where.hpp" />
     <ClInclude Include="Include\TRange\WithIndex.hpp" />
   </ItemGroup>
   <ItemGroup>
