--- a/TRange/TRange.vcxproj
+++ b/TRange/TRange.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Include\TRange\Concept.hpp" />
     <ClInclude Include="Include\TRange\IRange.hpp" />
     <ClInclude Include="Include\TRange\Judgement.hpp" />
+    <ClInclude Include="Include\TRange\ParameterPack.hpp" />
     <ClInclude Include="Include\TRange\Query.hpp" />
     <ClInclude Include="Include\TRange\Reverse.hpp" />
     <ClInclude Include="Include\TRange\Skip.hpp" />
