--- a/TRange/TRange.vcxproj
+++ b/TRange/TRange.vcxproj
@@ -130,9 +130,10 @@
     <ClInclude Include="Include\TRange\Concept.hpp" />
     <ClInclude Include="Include\TRange\IRange.hpp" />
     <ClInclude Include="Include\TRange\Judgement.hpp" />
-    <ClInclude Include="Include\TRange\ParameterPack.hpp" />
+    <ClInclude Include="Include\TRange\ParameterExpand.hpp" />
     <ClInclude Include="Include\TRange\Query.hpp" />
     <ClInclude Include="Include\TRange\Reverse.hpp" />
+    <ClInclude Include="Include\TRange\Select.hpp" />
     <ClInclude Include="Include\TRange\Skip.hpp" />
     <ClInclude Include="Include\TRange\Take.hpp" />
     <ClInclude Include="Include\TRange\Util.hpp" />
